@@ -1,5 +1,9 @@
 2001-04-27  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* optimize.c (maybe_clone_body): Copy parameter names and locations.
+
+2001-04-27  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* cp-tree.h (adjust_clone_args): Prototype new function.
 	* class.c (adjust_clone_args): New function.
 	* decl.c (start_function): Call it for in charge ctors.
